--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,6 @@ workflows:
             branches:
               only:
                 - master
-          context: CodacyGitHub
+          context: CodacyAWS
           requires:
             - plugins_test
